[package]
name = "arch"
version = "0.1.0"
edition = "2024"
authors = ["Sky Zheng <skyzheng@whu.edu.cn>"]

[dependencies]
bitflags = "2.9.0"
spin = "0.10.0"
mantahal-macro = "0.1.0"
buddy_system_allocator = "0.11.0"
log = "0.4"
fdt = "0.1.5"
once_cell = { version = "1.21", default-features = false, features = ["alloc"] }

[features]
default = ["irq", "debug", "log"]
irq = []
debug = []
log = []

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = "0.13.0"
sbi-rt = { version = "0.0.3", features = ["legacy"] }

[target.'cfg(target_arch = "loongarch64")'.dependencies]
loongArch64 = "0.2.5"

[patch.crates-io.mantahal-macro]
path = "mantahal-macro"